--- a/src/app/Usuario/listado-usuario/listado-usuario.component.html
+++ b/src/app/Usuario/listado-usuario/listado-usuario.component.html
@@ -6,6 +6,7 @@
             <th>Apellidos</th>
             <th>Telefono</th>
             <th>Username</th>
+            <th>Rol</th>
            <!-- <th>Password</th> -->
             <th>Modificar</th>
             <th>Eliminar</th>
@@ -16,6 +17,7 @@
             <td>{{usuario.apellidos}}</td>
             <td>{{usuario.telefono}}</td>
             <td>{{usuario.username}}</td>
+            <td>{{usuario.rol}}</td>
            <!-- <td>{{usuario.password}}</td>-->
             <td><button (click)="Editar(usuario)">Modificar</button></td>
             <td><button (click)="Eliminar(usuario)">Eliminar</button></td>
