--- a/src/app/mascota/agregar-mascota/agregar-mascota.component.html
+++ b/src/app/mascota/agregar-mascota/agregar-mascota.component.html
@@ -10,7 +10,8 @@
     </div>
 
     <label for="Tipo" class="mr-sm-2">Tipo</label>
-    <input type="text" id="tipo" name="tipo" placeholder="Tipo" autocomplete="off" [(ngModel)]="mascota.tipo"
+    <input type="text" id="tipo" name="tipo" placeholder="Tipo"
+     autocomplete="off" [(ngModel)]="mascota.tipo"
      #tipo="ngModel" required [ngModelOptions]="{updateOn:'blur'}">
     <div *ngIf="tipo.invalid && (tipo.dirty || tipo.touched)">
       <div *ngIf="tipo.errors.required">
@@ -20,15 +21,20 @@
 
 
     <label for="Precio" class="mr-sm-2">Precio</label>
-    <input type="text" id="precio" name="precio" placeholder="Precio" autocomplete="off" [(ngModel)]="mascota.precio"
-     #precio="ngModel" required [ngModelOptions]="{updateOn:'blur'}">
-    <div *ngIf="precio.invalid && (precio.dirty || precio.touched)">
+    <input type="text" id="precio" name="precio" 
+    placeholder="Precio" autocomplete="off" 
+    [(ngModel)]="mascota.precio"
+     #precio="ngModel" required 
+     [ngModelOptions]="{updateOn:'blur'}">
+    <div *ngIf="precio.invalid &&
+     (precio.dirty || precio.touched)">
       <div *ngIf="precio.errors.required">
         el precio es obligatorio
       </div>
     </div>
 
-    <button type="submit" [disabled] = "!formularioAlta.form.valid">Guardar</button>
+    <button type="submit" [disabled] 
+    = "!formularioAlta.form.valid">Guardar</button>
 </form>
 
 
